fixing the navbar not responsive issue

--- a/assets/css/tapangi.css
+++ b/assets/css/tapangi.css
@@ -148,6 +148,8 @@ p {
         color: #1a51aa; }
 
 @media (max-width: 767px) {
+  .navbar.navbar-fixed-top {
+    position: static; }
   .navbar .navbar-inner {
     background-color: #ffffff; }
     .navbar .navbar-inner .container {
